## Extopts library: advanced command line arguments parsing

AC_INIT([Extopts library], [0.1], [haff@midgard.by], [extopts],
        [https://github.com/githaff/extopts/wiki])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE([-Wall])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
